--- a/.editorconfig
+++ b/.editorconfig
@@ -1,16 +1,18 @@
 root = true
 
 [*]
-indent_style = space
-indent_size = 4
-end_of_line = lf
 charset = utf-8
-trim_trailing_whitespace = true
+indent_style = space
+indent_size = 2
 insert_final_newline = true
+trim_trailing_whitespace = true
+end_of_line = lf
 
 [*.{json,js,jsx,html,css,vue}]
 indent_style = space
 indent_size = 4
 
 [*.md]
+max_line_length = off
 trim_trailing_whitespace = false
+
