--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,8 @@
 {
-    "tabWidth": 4,
-    "singleQuote": true
-}
+    "useTabs": false,
+    "singleQuote": true,
+    "tabWidth": 2,
+    "printWidth": 120,
+    "trailingComma": "none"
+  }
+  
